# pdf-mcp

./: .gitignore  Makefile  index.py  main.py  pyoxidizer.bzl  pyproject.toml  zotero.py
.cursor/: mcp.json
scripts/: build_macos_app.sh
