[project]
name = "pdf-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arguably>=1.3.0",
    "fastapi>=0.116.1",
    "fastmcp>=2.11.3",
    "llama-index>=0.13.1",
    "llama-index-embeddings-ollama>=0.8.1",
    "llama-index-node-parser-docling>=0.4.0",
    "llama-index-readers-docling>=0.4.0",
    "llama-index-vector-stores-milvus>=0.9.0",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.3",
    "uvicorn>=0.35.0",
]
